feat: link plants to where the seeds come from
